array.island.Island.scala.error
Compilation error:
Island:5: error: '=' expected but ';' found.
  var nombreNiveaux = 0
^