array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  import scala.collection.mutable.Stack
  var truc
  var nombreNiveaux = 0
  var niveaux = Stack[Int]()
  for (elt <- num) {
    
    if (niveaux.isEmpty||niveaux.top < elt) { //Nouveau niveau
      
      niveaux.push(elt)
      
    } else if (niveaux.top >= elt) { //On est descendu d'un niveau de parenthésage, un point pour Griffondor !
      
      truc = niveaux.pop
      if (truc != 0) {
      nombreNiveaux = nombreNiveaux + 1
      }
    }
    
  }
  
  return nombreNiveaux
  
}